--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
             <img src="img/login3.png">
         {{/if}}
     </a>
-    <div id="formcontainer" class="logincontainer" style="display: block;">
+    <div id="formcontainer" class="logincontainer">
         {{#if user}}
             <div style="display: flex; justify-content: center;">
                 <form id="searchform" action="/logout" method="GET">
