--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -38,7 +38,7 @@
                     <a class="navtext">
                         <img src="img/search2.png">
                     </a>
-                    <div class="searchcontainer" style="display: block">
+                    <div id="searchcontainer" class="searchcontainer">
                         <form id="searchform" action="/search" method="GET">
                             <input type="text" placeholder="Поиск" name="search" value="">
                             <input type="submit" value="Искать" style="display: none;">
@@ -572,9 +572,11 @@
     <audio>
         <source src="snd/toasty.mp3" type="audio/mpeg">
     </audio>
-    <script src="js/load_json.js"></script>
-    <script src="js/easter_eggs.js"></script>
-    <script src="js/move_top.js"></script>
+    <script src="js/loadJson.js"></script>
+    <script src="js/easterEggs.js"></script>
+    <script src="js/moveTop.js"></script>
+    <script src="js/expand.js"></script>
+    <script src="js/highlightLogo.js"></script>
 </div>
 </body>
 </html>
