--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,8 +1,23 @@
 <div class="loginicon">
     <a class="navtext">
-        <img src="img/login3.png">
+        {{#if user}}
+            <img src="img/usericon.png">
+        {{else}}
+            <img src="img/login3.png">
+        {{/if}}
     </a>
-    <div id="formcontainer" class="logincontainer-expand" style="display: block;">
+    {{#if user}}
+            <div id="formcontainer" class="logincontainer">
+                <div style="display: flex; justify-content: center;">
+                    <form id="searchform" action="/logout" method="GET">
+                        Добро пожаловать, {{username}}!
+                        <input type="submit" value="Выйти">
+                    </form>
+                </div>
+            </div>
+        </div>
+    {{else}}
+    <div id="formcontainer" class="logincontainer-expand">
         <form id="loginform" method="post" action="/register">
             <input type="text" name="firstname" placeholder="Имя" id="firstname">
             <input type="text" name="lastname" placeholder="Фамилия" id="lastname">
@@ -15,5 +30,5 @@
         </form>
     </div>
 </div>
-
+    {{/if}}
 
