--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
     <a class="navtext">
         <img src="img/login3.png">
     </a>
-    <div id="formcontainer" class="logincontainer-expand" style="display: block;">
+    <div id="formcontainer" class="logincontainer expand" style="display: block;">
         <form id="loginform" method="post" action="/login">
             <input type="text" name="username" placeholder="Логин" id="login">
             <input type="password" name="password" placeholder="Пароль" id="pass">
