--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
     <div id="formcontainer" class="logincontainer">
         {{#if user}}
             <div style="display: flex; justify-content: center;">
-                <form id="searchform" action="/logout" method="GET">
+                <form id="loginform" action="/logout" method="GET">
                     Добро пожаловать, {{username}}!
                     <input type="submit" value="Выйти">
                 </form>
