--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
     <header>
         <div class="headercontent">
             <a class="dokalogo" href="/">
-                <img id="logoimg" src="img/dota_logo.png">
+                <img id="logoimg" src="img/dota_logo.png" alt="logo">
                 <div class="logotext">doka 2 trade</div>
             </a>
             <nav>
@@ -33,10 +33,10 @@
                 </ul>
             </nav>
             <div class="icons">
-                        {{{body}}}
+                {{{body}}}
                 <div class="searchicon">
                     <a class="navtext">
-                        <img src="img/search2.png">
+                        <img src="img/search2.png" alt="search">
                     </a>
                     <div id="searchcontainer" class="searchcontainer">
                         <form id="searchform" action="/search" method="GET">
@@ -49,13 +49,14 @@
         </div>
     </header>
     <section id="first">
-        <div class="content"></div>
+        <div class="content">
+        </div>
 
     </section>
     <footer>
         © 2018 Все права защищены
     </footer>
-    <div id="button_move_up" style="display: none;" onclick="moveTop()">
+    <div id="button_move_up">
         <div>🢁</div>
     </div>
     <audio>
