--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,8 +1,8 @@
 <div class="loginicon">
     <a class="navtext">
-        <img src="img/login3.png">
+        <img src="img/login3.png" alt="Login Icon">
     </a>
-    <div id="formcontainer" class="logincontainer expand" style="display: block;">
+    <div id="formcontainer" class="logincontainer">
         <form id="loginform" method="post" action="/login">
             <input type="text" name="username" placeholder="Логин" id="login">
             <input type="password" name="password" placeholder="Пароль" id="pass">
@@ -13,4 +13,3 @@
         </form>
     </div>
 </div>
-
