--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -12,8 +12,8 @@
     <header>
         <div class="headercontent">
             <a class="dokalogo" href="/">
-                <img id="logoimg" src="img/dota_logo.png" alt="logo">
-                <div class="logotext">doka 2 trade</div>
+                <img id="logoimg" src="img/dota_logo.png" alt="Logo">
+                <h1>doka 2 trade</h1>
             </a>
             <nav>
                 <ul>
@@ -36,7 +36,7 @@
                 {{{body}}}
                 <div class="searchicon">
                     <a class="navtext">
-                        <img src="img/search2.png" alt="search">
+                        <img src="img/search2.png" alt="Search Icon">
                     </a>
                     <div id="searchcontainer" class="searchcontainer">
                         <form id="searchform" action="/search" method="GET">
@@ -49,7 +49,7 @@
         </div>
     </header>
     <section id="first">
-        <div class="content">
+        <div id="content">
         </div>
 
     </section>
@@ -65,11 +65,14 @@
     <audio>
         <source src="snd/toasty.mp3" type="audio/mpeg">
     </audio>
-    <script src="js/loadJson.js"></script>
+    <script type="text/babel" src="js/loadJson.js"></script>
     <script src="js/easterEggs.js"></script>
-    <script src="js/moveTop.js"></script>
+    <script src="js/scrollTop.js"></script>
     <script src="js/expand.js"></script>
     <script src="js/highlightLogo.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </div>
 </body>
 </html>
